<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardview_cursos_inicio"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="0"
    app:cardBackgroundColor="#40C42152"
    app:cardCornerRadius="8dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true"
    app:contentPadding="4dp">

    <LinearLayout
        android:id="@+id/ly1_cardCursos"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ly2_cardCursos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_titulo_cardCursos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:text="@string/titulo_curso"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_titulo_cardCursos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="false"
                android:editable="false"
                android:ems="10"
                android:enabled="false"
                android:focusableInTouchMode="false"
                android:inputType="textPersonName" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/id_ly4_cardCursos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_descripcion_curso"
                android:layout_width="84dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/idioma_curso"
                android:textAlignment="textStart"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_idioma_cardCursos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="4"
                android:clickable="false"
                android:editable="false"
                android:ems="10"
                android:enabled="false"
                android:focusableInTouchMode="false"
                android:inputType="textPersonName"
                android:textAlignment="textStart" />

            <TextView
                android:id="@+id/tv_profesor_cardCursos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:text="@string/creador_curso"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_profesor_cardCursos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="false"
                android:ems="10"
                android:enabled="false"
                android:inputType="textPersonName" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/id_ly5_cardCursos"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="false"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_desc_curso"
                android:layout_width="84dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/desc_cursos"
                android:textAlignment="textStart"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_desc_cursos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="4"
                android:clickable="false"
                android:editable="false"
                android:ems="10"
                android:enabled="false"
                android:focusableInTouchMode="false"
                android:inputType="textPersonName"
                android:textAlignment="textStart" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_inscri_cursos"
                style="?attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_incripcion" />

            <Button
                android:id="@+id/btn_entrar_cardCursos"
                style="?attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_entrar" />
        </LinearLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>