<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardview_temarios_inicio"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="#40C42152"
    app:cardCornerRadius="8dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true"
    app:contentPadding="4dp">

    <LinearLayout
        android:id="@+id/ly1_cardCursos"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/id_ly3_cardCursos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_titulo_cardTemarios"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:text="@string/titulo_curso"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_titulo_cardTemarios"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:clickable="false"
                android:editable="false"
                android:ems="10"
                android:focusableInTouchMode="false"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/tv_nivel_cardTemarios"
                android:layout_width="44dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:clickable="false"
                android:text="@string/nivel_Temarios"
                android:textAlignment="textStart"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_nivel_cardTemarios"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="5"
                android:clickable="false"
                android:editable="false"
                android:ems="5"
                android:focusableInTouchMode="false"
                android:inputType="textPersonName"
                android:textAlignment="textStart" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ly2_cardCursos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_desc_temario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:clickable="false"
                android:text="@string/descripcion_Temarios"
                android:textAlignment="textStart"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_desc_cardtemario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:clickable="false"
                android:ems="10"
                android:inputType="textPersonName"
                android:textAlignment="textStart" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ly4_temarios"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"></LinearLayout>

        <Button
            android:id="@+id/btn_inscri_cursos"
            style="?attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_incripcion" />

    </LinearLayout>
</android.support.v7.widget.CardView>